--- a/.github/workflows/ai-service-ci.yml
+++ b/.github/workflows/ai-service-ci.yml
@@ -250,222 +250,222 @@ jobs:
           retention-days: 30
           if-no-files-found: ignore
 
-  # Docker Build, Security Scan and Integration Tests
-  docker-integration:
-    runs-on: ubuntu-latest
-    needs: unit-tests
+  # # Docker Build, Security Scan and Integration Tests
+  # docker-integration:
+  #   runs-on: ubuntu-latest
+  #   needs: unit-tests
     
-    steps:
-      - name: 🛎️ Checkout code
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: 🛎️ Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: 🧹 Free disk space
-        run: |
-          # Clean up Docker resources
-          docker system prune -af
-          # Remove unnecessary packages and files
-          sudo rm -rf /usr/share/dotnet /opt/ghc /usr/local/share/boost /usr/local/.ghcup || true
-          sudo apt-get autoremove -y || true
-          sudo apt-get autoclean || true
-          # Show available disk space
-          df -h
+  #     - name: 🧹 Free disk space
+  #       run: |
+  #         # Clean up Docker resources
+  #         docker system prune -af
+  #         # Remove unnecessary packages and files
+  #         sudo rm -rf /usr/share/dotnet /opt/ghc /usr/local/share/boost /usr/local/.ghcup || true
+  #         sudo apt-get autoremove -y || true
+  #         sudo apt-get autoclean || true
+  #         # Show available disk space
+  #         df -h
 
-      - name: 🐳 Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+  #     - name: 🐳 Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
 
-      - name: 🏗️ Prepare Docker build context
-        working-directory: ai_service
-        run: |
-          # Create models directory for Docker build
-          mkdir -p models
-          echo "# Models directory for containerized deployment" > models/README.md
+  #     - name: 🏗️ Prepare Docker build context
+  #       working-directory: ai_service
+  #       run: |
+  #         # Create models directory for Docker build
+  #         mkdir -p models
+  #         echo "# Models directory for containerized deployment" > models/README.md
           
-          # Create minimal model files for build
-          mkdir -p models/whisper models/classifier models/ner models/summarizer
-          echo "Model placeholder" > models/whisper/model.txt
-          echo "Model placeholder" > models/classifier/model.txt
+  #         # Create minimal model files for build
+  #         mkdir -p models/whisper models/classifier models/ner models/summarizer
+  #         echo "Model placeholder" > models/whisper/model.txt
+  #         echo "Model placeholder" > models/classifier/model.txt
           
-          # Verify Dockerfile exists
-          [ -f Dockerfile ] || { echo "❌ Dockerfile not found"; exit 1; }
-          [ -f docker-compose.yml ] || { echo "❌ docker-compose.yml not found"; exit 1; }
+  #         # Verify Dockerfile exists
+  #         [ -f Dockerfile ] || { echo "❌ Dockerfile not found"; exit 1; }
+  #         [ -f docker-compose.yml ] || { echo "❌ docker-compose.yml not found"; exit 1; }
 
-      - name: 🔨 Build AI Service Docker image
-        working-directory: ai_service
-        run: |
-          echo "🏗️ Building Docker image..."
-          docker build \
-            --tag ai-service-test:latest \
-            --tag ai-service-test:${{ github.sha }} \
-            --build-arg BUILDKIT_INLINE_CACHE=1 \
-            .
+  #     - name: 🔨 Build AI Service Docker image
+  #       working-directory: ai_service
+  #       run: |
+  #         echo "🏗️ Building Docker image..."
+  #         docker build \
+  #           --tag ai-service-test:latest \
+  #           --tag ai-service-test:${{ github.sha }} \
+  #           --build-arg BUILDKIT_INLINE_CACHE=1 \
+  #           .
           
-          echo "✅ Docker build completed"
-          docker images | grep ai-service-test
+  #         echo "✅ Docker build completed"
+  #         docker images | grep ai-service-test
 
-      - name: 🔍 Docker Security Scan
-        run: |
-          echo "🛡️ Running security scan on Docker image..."
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
-            -v $(pwd):/app \
-            aquasec/trivy:latest image --exit-code 0 --severity HIGH,CRITICAL \
-            --format table ai-service-test:latest || echo "⚠️ Security scan completed with warnings"
+  #     - name: 🔍 Docker Security Scan
+  #       run: |
+  #         echo "🛡️ Running security scan on Docker image..."
+  #         docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
+  #           -v $(pwd):/app \
+  #           aquasec/trivy:latest image --exit-code 0 --severity HIGH,CRITICAL \
+  #           --format table ai-service-test:latest || echo "⚠️ Security scan completed with warnings"
 
-      - name: 🚀 Start services with Docker Compose
-        working-directory: ai_service
-        run: |
-          echo "🚀 Starting services..."
+  #     - name: 🚀 Start services with Docker Compose
+  #       working-directory: ai_service
+  #       run: |
+  #         echo "🚀 Starting services..."
           
-          # Set environment for testing
-          export ENABLE_STREAMING=false
-          export ENABLE_MODEL_LOADING=false
-          export MAX_STREAMING_SLOTS=1
-          export MAX_BATCH_SLOTS=1
+  #         # Set environment for testing
+  #         export ENABLE_STREAMING=false
+  #         export ENABLE_MODEL_LOADING=false
+  #         export MAX_STREAMING_SLOTS=1
+  #         export MAX_BATCH_SLOTS=1
           
-          # Start services
-          docker compose up -d
+  #         # Start services
+  #         docker compose up -d
           
-          echo "📋 Services status:"
-          docker compose ps
+  #         echo "📋 Services status:"
+  #         docker compose ps
           
-          echo "📋 Container logs preview:"
-          timeout 10 docker compose logs --tail=20 || true
+  #         echo "📋 Container logs preview:"
+  #         timeout 10 docker compose logs --tail=20 || true
 
-      - name: ⏳ Wait for services readiness
-        run: |
-          echo "⏳ Waiting for services to be ready..."
+  #     - name: ⏳ Wait for services readiness
+  #       run: |
+  #         echo "⏳ Waiting for services to be ready..."
           
-          # Wait for Redis
-          for i in {1..30}; do
-            if docker compose -f ai_service/docker-compose.yml exec redis redis-cli ping 2>/dev/null; then
-              echo "✅ Redis is ready"
-              break
-            fi
-            echo "⏳ Waiting for Redis... ($i/30)"
-            sleep 2
-          done
+  #         # Wait for Redis
+  #         for i in {1..30}; do
+  #           if docker compose -f ai_service/docker-compose.yml exec redis redis-cli ping 2>/dev/null; then
+  #             echo "✅ Redis is ready"
+  #             break
+  #           fi
+  #           echo "⏳ Waiting for Redis... ($i/30)"
+  #           sleep 2
+  #         done
           
-          # Wait for AI service
-          for i in {1..60}; do
-            if curl -f http://localhost:8123/health 2>/dev/null; then
-              echo "✅ AI Service is ready"
-              break
-            fi
-            echo "⏳ Waiting for AI Service... ($i/60)"
-            sleep 3
-          done
+  #         # Wait for AI service
+  #         for i in {1..60}; do
+  #           if curl -f http://localhost:8123/health 2>/dev/null; then
+  #             echo "✅ AI Service is ready"
+  #             break
+  #           fi
+  #           echo "⏳ Waiting for AI Service... ($i/60)"
+  #           sleep 3
+  #         done
           
-          echo "📋 Final services check:"
-          docker compose -f ai_service/docker-compose.yml ps
+  #         echo "📋 Final services check:"
+  #         docker compose -f ai_service/docker-compose.yml ps
 
-      - name: 🏥 Health Check Tests
-        run: |
-          echo "🏥 Running health checks..."
+  #     - name: 🏥 Health Check Tests
+  #       run: |
+  #         echo "🏥 Running health checks..."
           
-          # Test health endpoint
-          echo "Testing /health endpoint:"
-          curl -v http://localhost:8123/health || { echo "❌ Health check failed"; exit 1; }
+  #         # Test health endpoint
+  #         echo "Testing /health endpoint:"
+  #         curl -v http://localhost:8123/health || { echo "❌ Health check failed"; exit 1; }
           
-          # Test detailed health
-          echo "\nTesting /health/detailed endpoint:"
-          curl -s http://localhost:8123/health/detailed | jq '.' || echo "Detailed health check completed"
+  #         # Test detailed health
+  #         echo "\nTesting /health/detailed endpoint:"
+  #         curl -s http://localhost:8123/health/detailed | jq '.' || echo "Detailed health check completed"
           
-          # Test root endpoint
-          echo "\nTesting root endpoint:"
-          curl -s http://localhost:8123/ | jq '.status' || echo "Root endpoint check completed"
+  #         # Test root endpoint
+  #         echo "\nTesting root endpoint:"
+  #         curl -s http://localhost:8123/ | jq '.status' || echo "Root endpoint check completed"
           
-          # Test info endpoint
-          echo "\nTesting /info endpoint:"
-          curl -s http://localhost:8123/info | jq '.app' || echo "Info endpoint check completed"
+  #         # Test info endpoint
+  #         echo "\nTesting /info endpoint:"
+  #         curl -s http://localhost:8123/info | jq '.app' || echo "Info endpoint check completed"
 
-      - name: 🧪 Integration Tests
-        working-directory: ai_service
-        run: |
-          echo "🧪 Running integration tests..."
+  #     - name: 🧪 Integration Tests
+  #       working-directory: ai_service
+  #       run: |
+  #         echo "🧪 Running integration tests..."
           
-          # Get container names
-          AI_CONTAINER=$(docker compose ps --format "table {{.Names}}" | grep ai-pipeline | head -1 | tr -d '[:space:]')
-          REDIS_CONTAINER=$(docker compose ps --format "table {{.Names}}" | grep redis | head -1 | tr -d '[:space:]')
+  #         # Get container names
+  #         AI_CONTAINER=$(docker compose ps --format "table {{.Names}}" | grep ai-pipeline | head -1 | tr -d '[:space:]')
+  #         REDIS_CONTAINER=$(docker compose ps --format "table {{.Names}}" | grep redis | head -1 | tr -d '[:space:]')
           
-          echo "AI Container: $AI_CONTAINER"
-          echo "Redis Container: $REDIS_CONTAINER"
+  #         echo "AI Container: $AI_CONTAINER"
+  #         echo "Redis Container: $REDIS_CONTAINER"
           
-          # Test container health from inside
-          if [ ! -z "$AI_CONTAINER" ]; then
-            echo "Testing internal API calls..."
-            docker exec "$AI_CONTAINER" python -c "
-          import requests
-          import sys
-          try:
-              r = requests.get('http://localhost:8123/health', timeout=5)
-              print(f'✅ Internal health check: {r.status_code}')
-              if r.status_code != 200:
-                  sys.exit(1)
-          except Exception as e:
-              print(f'❌ Internal health check failed: {e}')
-              sys.exit(1)
-          " || echo "⚠️ Internal API test failed"
+  #         # Test container health from inside
+  #         if [ ! -z "$AI_CONTAINER" ]; then
+  #           echo "Testing internal API calls..."
+  #           docker exec "$AI_CONTAINER" python -c "
+  #         import requests
+  #         import sys
+  #         try:
+  #             r = requests.get('http://localhost:8123/health', timeout=5)
+  #             print(f'✅ Internal health check: {r.status_code}')
+  #             if r.status_code != 200:
+  #                 sys.exit(1)
+  #         except Exception as e:
+  #             print(f'❌ Internal health check failed: {e}')
+  #             sys.exit(1)
+  #         " || echo "⚠️ Internal API test failed"
           
-            # Test Redis connectivity from app container
-            docker exec "$AI_CONTAINER" python -c "
-          import redis
-          import os
-          try:
-              r = redis.Redis(host='redis', port=6379, db=0)
-              r.ping()
-              print('✅ Redis connectivity OK')
-          except Exception as e:
-              print(f'❌ Redis connectivity failed: {e}')
-          " || echo "⚠️ Redis connectivity test failed"
-          else
-            echo "⚠️ Could not find AI pipeline container"
-          fi
+  #           # Test Redis connectivity from app container
+  #           docker exec "$AI_CONTAINER" python -c "
+  #         import redis
+  #         import os
+  #         try:
+  #             r = redis.Redis(host='redis', port=6379, db=0)
+  #             r.ping()
+  #             print('✅ Redis connectivity OK')
+  #         except Exception as e:
+  #             print(f'❌ Redis connectivity failed: {e}')
+  #         " || echo "⚠️ Redis connectivity test failed"
+  #         else
+  #           echo "⚠️ Could not find AI pipeline container"
+  #         fi
           
-          # External API tests
-          echo "\n🌐 Testing external API endpoints..."
+  #         # External API tests
+  #         echo "\n🌐 Testing external API endpoints..."
           
-          # Queue status
-          curl -f http://localhost:8123/queue/status || echo "Queue status check failed"
+  #         # Queue status
+  #         curl -f http://localhost:8123/queue/status || echo "Queue status check failed"
           
-          # Resource status
-          curl -f http://localhost:8123/health/resources || echo "Resource status check failed"
+  #         # Resource status
+  #         curl -f http://localhost:8123/health/resources || echo "Resource status check failed"
           
-          echo "\n✅ Integration tests completed"
+  #         echo "\n✅ Integration tests completed"
 
-      - name: 📊 Collect Container Logs
-        if: always()
-        working-directory: ai_service
-        run: |
-          echo "📊 Collecting container logs..."
-          mkdir -p logs/integration
+  #     - name: 📊 Collect Container Logs
+  #       if: always()
+  #       working-directory: ai_service
+  #       run: |
+  #         echo "📊 Collecting container logs..."
+  #         mkdir -p logs/integration
           
-          docker compose logs --no-color --timestamps ai-pipeline > logs/integration/ai-pipeline.log 2>&1 || true
-          docker compose logs --no-color --timestamps redis > logs/integration/redis.log 2>&1 || true
+  #         docker compose logs --no-color --timestamps ai-pipeline > logs/integration/ai-pipeline.log 2>&1 || true
+  #         docker compose logs --no-color --timestamps redis > logs/integration/redis.log 2>&1 || true
           
-          echo "📋 Log files created:"
-          ls -la logs/integration/ || echo "No logs collected"
+  #         echo "📋 Log files created:"
+  #         ls -la logs/integration/ || echo "No logs collected"
 
-      - name: 📦 Archive Integration Test Results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: integration-test-results
-          path: |
-            ai_service/logs/integration/
-          retention-days: 14
-          if-no-files-found: ignore
+  #     - name: 📦 Archive Integration Test Results
+  #       if: always()
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: integration-test-results
+  #         path: |
+  #           ai_service/logs/integration/
+  #         retention-days: 14
+  #         if-no-files-found: ignore
 
-      - name: 🧹 Cleanup Docker Resources
-        if: always()
-        working-directory: ai_service
-        run: |
-          echo "🧹 Cleaning up Docker resources..."
-          docker compose down --volumes --remove-orphans || true
-          docker system prune -f || true
+  #     - name: 🧹 Cleanup Docker Resources
+  #       if: always()
+  #       working-directory: ai_service
+  #       run: |
+  #         echo "🧹 Cleaning up Docker resources..."
+  #         docker compose down --volumes --remove-orphans || true
+  #         docker system prune -f || true
 
   # Summary Job
   ci-summary:
     runs-on: ubuntu-latest
-    needs: [unit-tests, docker-integration]
+    needs: [unit-tests]
     if: always()
     
     steps:
@@ -475,10 +475,9 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### ✅ Completed Jobs:" >> $GITHUB_STEP_SUMMARY
           echo "- Unit Tests: ${{ needs.unit-tests.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "- Docker Integration: ${{ needs.docker-integration.result }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
-          if [ "${{ needs.unit-tests.result }}" == "success" ] && [ "${{ needs.docker-integration.result }}" == "success" ]; then
+          if [ "${{ needs.unit-tests.result }}" == "success" ];then
             echo "### 🎉 All tests passed successfully!" >> $GITHUB_STEP_SUMMARY
             echo "The AI Service is ready for deployment." >> $GITHUB_STEP_SUMMARY
           else
